--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "st-catherine-academy",
+  "homepage": "https://github.com/NasTiaFox30/Saint_Catherine_Academy-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.1",
